# expat_builtin

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
src/: Makefile.am  Makefile.in  expat.c  parse.c  parse.h
